force-app/main/default/objects/SBQQ__ProductFeature__c/fields/External_Sku_Concat__c.field-meta.xml
<CustomField>
        <fullName>External_Sku_Concat__c</fullName>
        <externalId>true</externalId>
        <label>External Sku Concat</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>