force-app/main/default/objects/SBQQ__ProductFeature__c/fields/Feature_External_ID__c.field-meta.xml
<CustomField>
        <fullName>Feature_External_ID__c</fullName>
        <description>This field is a unique Feature ID.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field is a unique Feature ID.</inlineHelpText>
        <label>Feature External ID</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>