force-app/main/default/objects/SBQQ__ProductFeature__c/fields/SBQQ__Category__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Category__c</fullName>
        <description>Category of options in this feature. Allows for another level of grouping.</description>
        <inlineHelpText>Assign this feature to a category such that multiple features with related options are grouped together.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Teller</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>ActiveView Teller Capture</fullName>
                </value>
                <value>
                    <fullName>uOpen Online</fullName>
                </value>
                <value>
                    <fullName>uOpen Branch and Online (SwitchKit included)</fullName>
                </value>
                <value>
                    <fullName>uOpen Connectivity</fullName>
                </value>
                <value>
                    <fullName>uOpen Additional Services</fullName>
                </value>
                <value>
                    <fullName>uOpen Professional Services</fullName>
                </value>
                <value>
                    <fullName>Merchant Services RDC</fullName>
                </value>
                <value>
                    <fullName>Merchant Services - Optional Services</fullName>
                </value>
                <value>
                    <fullName>Mobile RDC</fullName>
                </value>
                <value>
                    <fullName>Touche Analyzer</fullName>
                </value>
                <value>
                    <fullName>Total Analytics</fullName>
                </value>
                <value>
                    <fullName>Demographics</fullName>
                </value>
                <value>
                    <fullName>Issuer and Debit Card Services</fullName>
                </value>
                <value>
                    <fullName>Card Production Services</fullName>
                </value>
                <value>
                    <fullName>Terminal and Gateway Services</fullName>
                </value>
                <value>
                    <fullName>Value Added Services</fullName>
                </value>
                <value>
                    <fullName>Misc. Services</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>Managed Services</fullName>
                </value>
                <value>
                    <fullName>Bundle Components</fullName>
                </value>
                <value>
                    <fullName>Sales &amp; Service</fullName>
                </value>
                <value>
                    <fullName>Full Suite</fullName>
                </value>
                <value>
                    <fullName>Channel eServices</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Add-on Products</fullName>
                </value>
                <value>
                    <fullName>ActiveView</fullName>
                </value>
                <value>
                    <fullName>ECM</fullName>
                </value>
                <value>
                    <fullName>Kofax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>