force-app/main/default/objects/SBQQ__ProductFeature__c/fields/SBQQ__ConfigurationFieldSet__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ConfigurationFieldSet__c</fullName>
        <description>The API name of the field set that will be used for this feature during configuration.</description>
        <inlineHelpText>The API name of the field set that will be used for this feature during configuration.</inlineHelpText>
        <label>Configuration Field Set</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OptionConfiguration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>