force-app/main/default/objects/SBQQ__ProductFeature__c/fields/SBQQ__ConfiguredSKU__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ConfiguredSKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product bundle that includes this feature. If you created the feature from the product detail page, this should already be populated.</description>
        <inlineHelpText>The product bundle that includes this feature. If you created the feature from the product detail page, this should already be populated.</inlineHelpText>
        <label>Configured SKU</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Features</relationshipLabel>
        <relationshipName>Features</relationshipName>
        <type>Lookup</type>
    </CustomField>