force-app/main/default/objects/SBQQ__ProductFeature__c/fields/SBQQ__DiscountSchedule__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount schedule to be applied to the product selected by all options in this feature.</description>
        <inlineHelpText>Discount schedule to be applied to the product selected by all options in this feature. This overrides discount schedule selected on the product.</inlineHelpText>
        <label>Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Product Features</relationshipLabel>
        <relationshipName>ProductFeatures</relationshipName>
        <type>Lookup</type>
    </CustomField>