force-app/main/default/objects/SBQQ__ProductFeature__c/fields/SBQQ__MaxOptionCount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__MaxOptionCount__c</fullName>
        <description>Maximum number of options for this feature that can be selected as part of the product bundle.</description>
        <inlineHelpText>Maximum number of options for this feature that can be selected as part of the product bundle.</inlineHelpText>
        <label>Max Options</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>