force-app/main/default/objects/SBQQ__ProductFeature__c/fields/SBQQ__MinOptionCount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__MinOptionCount__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Minimum number of options for this feature that must be part of the product bundle.</description>
        <inlineHelpText>Minimum number of options for this feature that must be part of the product bundle.</inlineHelpText>
        <label>Min Options</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>