force-app/main/default/objects/SBQQ__ProductFeature__c/fields/SBQQ__Number__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Number__c</fullName>
        <description>A sequential number that determines how the features are sorted in the related list on the product.</description>
        <inlineHelpText>A sequential number that determines how the features are sorted in the related list on the product.</inlineHelpText>
        <label>Number</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>