force-app/main/default/objects/SBQQ__ProductFeature__c/validationRules/SBQQ__Dynamic_OptionSelectionMethod_Validation.validationRule-meta.xml
<ValidationRule>
        <fullName>SBQQ__Dynamic_OptionSelectionMethod_Validation</fullName>
        <active>true</active>
        <description>Option selection method for evergreen or renewable/evergreen configurable SKU cannot be Dynamic</description>
        <errorConditionFormula>AND(OR(ISPICKVAL(SBQQ__ConfiguredSKU__r.SBQQ__SubscriptionType__c, &apos;Evergreen&apos;),  ISPICKVAL(SBQQ__ConfiguredSKU__r.SBQQ__SubscriptionType__c,&apos;Renewable/Evergreen&apos;)), ISPICKVAL(SBQQ__OptionSelectionMethod__c, &apos;Dynamic&apos;))</errorConditionFormula>
        <errorMessage>Can’t create dynamic bundles for evergreen or renewable/evergreen products</errorMessage>
    </ValidationRule>