force-app/main/default/objects/SBQQ__ProductFeature__c/validationRules/SBQQ__MinOptionValidation.validationRule-meta.xml
<ValidationRule>
        <fullName>SBQQ__MinOptionValidation</fullName>
        <active>true</active>
        <description>Min Options cannot be negative.</description>
        <errorConditionFormula>AND(ISNEW(),SBQQ__MinOptionCount__c &lt; 0)</errorConditionFormula>
        <errorDisplayField>SBQQ__MinOptionCount__c</errorDisplayField>
        <errorMessage>Min Options cannot be negative.</errorMessage>
    </ValidationRule>